[workspace]
members = [".", "iter_matcher_tests"]
default-members = [".", "iter_matcher_tests"]

[patch.crates-io]
iter_matcher = { path = "." }

[package]
name = "iter_matcher"
version = "0.1.0"
authors = ["Daniel Parks <oss-iter-matcher@demonhorse.org>"]
description = "Generate functions to quickly map byte string prefixes to values"
homepage = "https://github.com/danielparks/iter-matcher"
repository = "https://github.com/danielparks/iter-matcher"
readme = "README.md"
keywords = ["codegen", "parsing", "lexing", "match"]
categories = ["encoding", "parsing"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]

[dev-dependencies]
bstr = { version = "1.1.0", default-features = false, features = ["std"] }
pretty_assertions = "1.3.0"
temp-dir = "0.1.11"
