[workspace]
members = [".", "matchgen_tests"]
default-members = [".", "matchgen_tests"]

[patch.crates-io]
matchgen = { path = "." }

[package]
name = "matchgen"
version = "0.2.0"
authors = ["Daniel Parks <oss-matchgen@demonhorse.org>"]
description = "Generate functions to quickly map byte string prefixes to values"
homepage = "https://github.com/danielparks/matchgen"
repository = "https://github.com/danielparks/matchgen"
readme = "README.md"
keywords = ["codegen", "parsing", "lexing", "match"]
categories = ["encoding", "parsing"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]

[dev-dependencies]
bstr = { version = "1.1.0", default-features = false, features = ["std"] }
pretty_assertions = "1.3.0"
temp-dir = "0.1.11"
