[workspace]
members = [".", "matchgen_tests"]
default-members = [".", "matchgen_tests"]

[patch.crates-io]
matchgen = { path = "." }

[package]
name = "matchgen"
version = "0.3.1"
authors = ["Daniel Parks <oss-matchgen@demonhorse.org>"]
description = "Generate functions to quickly map byte string prefixes to values"
homepage = "https://github.com/danielparks/matchgen"
repository = "https://github.com/danielparks/matchgen"
readme = "README.md"
keywords = ["codegen", "parsing", "lexing", "match"]
categories = ["encoding", "parsing"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]

[dev-dependencies]
bstr = { version = "0.2.17", default-features = false, features = ["std"] }
criterion = "0.4.0"
pretty_assertions = "1.3.0"
serde_json = "1.0.91"
temp-dir = "0.1.11"

[lib]
bench = false

[[bench]]
name = "builder"
harness = false

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"

# Other restriction lints
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn" # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn" # maybe? alternative is fallible.
get_unwrap = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Pedantic exceptions
let_underscore_untyped = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
unnecessary_debug_formatting = "allow" # display() doesn’t escape invalid chars

# Nursery exceptions
option_if_let_else = "allow"
